kuber/app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-service-deployment
  labels:
    app: stock-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stock-service
  template:
    metadata:
      labels:
        app: stock-service
    spec:
      containers:
      - name: stock-service
        image: arsenteroganisyan/stock-service:v1

        ports:
        - containerPort: 8000
