kuber/app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: stock-service
spec:
  type: NodePort
  selector:
    app: stock-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8000
