kuber/app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-service-entry-point
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "arch.homework"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 8080
